# ex-caller

./: .gitignore  .mailmap  .npmrc  .tool-versions  3rd-party-licenses.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.vue  bun.lockb  bunfig.vue-tsc.toml  env.d.ts  error.vue  eslint.config.js  eslint.polyfill.js  i18n.config.ts  index.html  meta.ts  netlify.toml  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  shims.d.ts  tsconfig.app.json  tsconfig.bun.json  tsconfig.json  tsconfig.test.json  vite-env.d.ts  vite.config.ts  vitest.config.ts  wrangler.toml
.github/: FUNDING.yml
__tests__/: group.spec.ts  namelist.spec.ts  roll-call.spec.ts  shims.d.ts
app/: app.vue  error.vue  i18n.config.ts  shims.d.ts  spa-loading-template.html
components/: SingleImageSelector.vue  background.vue  changelog-simplified.md  changelog.vue  dynamic-input.tsx  ex-caller.vue  info-modal.vue  large-button.tsx  licenses.vue  link-to-modal.vue  loading.vue  result-board.vue  settings.vue  single-file-selector.vue  updater.vue  wip.vue
composables/: use-context-config.ts  use-group-list.ts  use-group-members.ts  use-group.ts  use-json-file.ts  use-roll-call.ts  use-user-config.ts
i18n/: i18n.config.ts
locales/: en.ts  utils.ts
patches/: @tauri-apps%2Fapi@2.4.1.patch
public/: _redirects  licenses.html  licenses.txt  privacy-policy.html
src/: app.vue  main.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
stores/: config.ts  group.ts  (+2 more)
(+139 files in other folders)
