[package]
name = "ex-caller"
version = "1.0.1"
description = "一个简约风格的随机点名工具"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.16", features = [] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tauri-plugin-dialog = "2.0.0-rc.7"
tauri-plugin-fs = "2.0.0-rc.5"
tauri-plugin-shell = "2.0.0-rc.3"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
