[package]
name = "ex-caller"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
