[package]
name = "ex-caller"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [ "tray-icon" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2.5.4"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
